src/test/resources/typeSystemTestModels/valid/annotations/AnnotationTypeModifier.java
/* (c) https://github.com/MontiCore/monticore */

public class AnnotationTypeModifier {

  public @interface getType {

  }

}
