src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/GrandBox.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.fieldsAndLocalVars;

public class GrandBox<T> extends Box<Integer> {

  public GrandBox(){

  }
}
